# GoorooLink-versioning-manager

./: .gitattributes  .gitignore  DESIGN_REGISTRY_RELEASE_PIPELINE.md  README.md  compatibility_registry.json  pyproject.toml
artifacts/firmware/: liobox2_v620.lbf
config/: openstack_env.sh
registry/: compatibility_registry.json
src/gooroo_registry/: __init__.py  checksum.py  cli.py  gui.py  publisher.py  registry.py  schema.py  sparkle_generator.py  validators.py
tests/: conftest.py  test_checksum.py  test_registry.py  test_sparkle_generator.py  test_validators.py
