[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gooroo-registry"
version = "0.1.0"
description = "Gooroo Releases — Compatibility Registry Manager"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jsonschema>=4.21",
    "keyring>=24.0",
    "packaging>=24.0",
    "python-swiftclient>=4.3",
    "python-keystoneclient>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
gooroo-registry = "gooroo_registry.cli:cli"
gooroo-registry-gui = "gooroo_registry.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
